syntax = "proto3";

package kubeproxy;

import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "github.com/AsynkronIT/protoactor-go/actor/actor.proto";
option go_package = "kubeproxy";

enum SubscribeAction {
  CREATE = 0;
  UPDATE = 1;
  DELETE = 2;
}

message GroupVersionResource {
  string Group = 1;
  string Version = 2;
  string Resource = 3;
}

message SubscribeOption {
  int64 RateLimitation = 1;
}

message SubscribeResource {
  GroupVersionResource GVR = 1;
  int32 ActionCode = 2;
  SubscribeOption Option = 3;
}

message SubscribeResourceFor {
  SubscribeResource Resource = 1;
  actor.PID Subscriber = 2;
}

message SubscribeConfirm {
  k8s.io.apimachinery.pkg.apis.meta.v1.Time Timestamp = 1;
  SubscribeResource Subscribe = 2;
}

message CreateEvent {
  k8s.io.apimachinery.pkg.apis.meta.v1.Time Timestamp = 1;
  GroupVersionResource GVR = 2;
  bytes RawResource = 3;
}

message DeleteEvent {
  k8s.io.apimachinery.pkg.apis.meta.v1.Time Timestamp = 1;
  GroupVersionResource GVR = 2;
  bytes RawResource = 3;
}

message UpdateEvent {
  k8s.io.apimachinery.pkg.apis.meta.v1.Time Timestamp = 1;
  GroupVersionResource GVR = 2;
  bytes OldResource = 3;
  bytes NewResource = 4;
}

